8332744: [REDO] 'internal proprietary API' diagnostics if --system is configured to an earlier JDK version
Reviewed-by: vromero